# whisper-burn

./: CLAUDE.md  Cargo.toml  README.md  build.bat  functionality.md  hf_readme.md
patches/cubecl-wgpu-0.9.0/: Cargo.toml
patches/cubecl-wgpu-0.9.0/src/: device.rs  runtime.rs
scripts/: convert_whisper.py
src/: lib.rs  tokenizer.rs  transcribe.rs
src/audio/: io.rs  mel.rs  mod.rs  resample.rs
src/gguf/: linear.rs  loader.rs  mod.rs  op.rs  reader.rs  shader.wgsl  tensor.rs  tests.rs
src/model/: attention.rs  config.rs  decoder.rs  encoder.rs  layers.rs  mod.rs  whisper.rs
src/native/: app.rs  audio_capture.rs  audio_mute.rs  auto_paste.rs  config.rs  download.rs  hotkey.rs  inference.rs  mod.rs  model_manager.rs  tray.rs
src/native/ui/: download_screen.rs  loading_screen.rs  main_screen.rs  mod.rs  model_manager_screen.rs  settings_panel.rs  status_indicator.rs  theme.rs  waveform.rs
