[package]
name = "whisper-burn"
version = "0.1.0"
edition = "2021"
description = "Whisper Large V3 / V3 Turbo - Native ASR in Rust with Burn + wgpu"
license = "MIT"

[features]
default = ["wgpu", "native"]
wgpu = ["burn/wgpu"]
native = ["eframe", "cpal", "ureq", "wgpu"]

[dependencies]
# Burn ML framework
burn = { version = "0.20", default-features = false, features = ["std", "autodiff", "template"] }
cubecl = { version = "0.9", default-features = false, features = ["wgpu"] }

# Tokenization
tokenizers = "0.22"

# Audio processing
hound = "3.5"
rubato = "1.0"
rustfft = "6.4"
audioadapter-buffers = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
num-traits = "0.2"
num-complex = "0.4"
byteorder = "1.5"
half = "2.7"

# Native desktop app
eframe = { version = "0.31", optional = true, default-features = false, features = ["default_fonts", "glow"] }
cpal = { version = "0.15", optional = true }
ureq = { version = "2.12", optional = true }

[[bin]]
name = "whisper-native"
path = "src/bin/main.rs"
required-features = ["native"]

[lib]
crate-type = ["rlib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[patch.crates-io]
cubecl-wgpu = { path = "patches/cubecl-wgpu-0.9.0" }
