[package]
name = "whisper-burn"
version = "0.1.0"
edition = "2021"
description = "Whisper Large V3 / V3 Turbo - Native ASR in Rust with Burn + wgpu"
license = "MIT"

[features]
default = ["wgpu", "native"]
wgpu = ["burn/wgpu"]
native = ["eframe", "cpal", "ureq", "wgpu", "global-hotkey", "tray-icon", "arboard", "enigo", "dirs", "image", "windows"]

[dependencies]
# Burn ML framework
burn = { version = "0.20", default-features = false, features = ["std", "autodiff", "template"] }
cubecl = { version = "0.9", default-features = false, features = ["wgpu"] }

# Tokenization
tokenizers = "0.22"

# Audio processing
hound = "3.5"
rubato = "1.0"
rustfft = "6.4"
audioadapter-buffers = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
num-traits = "0.2"
num-complex = "0.4"
byteorder = "1.5"
half = "2.7"

# Native desktop app
eframe = { version = "0.31", optional = true, default-features = false, features = ["default_fonts", "glow"] }
cpal = { version = "0.15", optional = true }
ureq = { version = "2.12", optional = true }
global-hotkey = { version = "0.7", optional = true }
tray-icon = { version = "0.19", optional = true }
arboard = { version = "3.4", optional = true }
enigo = { version = "0.2", optional = true }
dirs = { version = "6.0", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", optional = true, features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[[bin]]
name = "whisper-native"
path = "src/bin/main.rs"
required-features = ["native"]

[lib]
crate-type = ["rlib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[patch.crates-io]
cubecl-wgpu = { path = "patches/cubecl-wgpu-0.9.0" }
